--- a/numpy_nn.ipynb
+++ b/numpy_nn.ipynb
@@ -30,7 +30,11 @@
       "metadata": {
         "id": "IqgyOy4Qso7v",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "215ae5e8-3b28-489e-e957-bf7db2b12d10",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -61,15 +65,27 @@
         "\n",
         "print(x_numpy.shape)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(16, 4)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "HyAwvfvmSV4l",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "8bcfc584-026f-467e-cfc5-8c37b6db06f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "y_numpy = np.array(     [[1.],\n",
@@ -92,15 +108,27 @@
         "\n",
         "print(y_numpy.shape)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(16, 1)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "7YJNoruLSXgk",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "4e690d09-c89b-4856-9600-3fea9f4eceb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        }
       },
       "source": [
         "# Randomly initialize weights\n",
@@ -109,8 +137,20 @@
         "print(w)\n",
         "print(w.shape)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 0.75362989]\n",
+            " [ 0.66951912]\n",
+            " [-1.95609075]\n",
+            " [ 0.64266451]]\n",
+            "(4, 1)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -120,7 +160,7 @@
         "colab": {}
       },
       "source": [
-        "learning_rate = 1e-5\n",
+        "learning_rate = 1e-2\n",
         "loss_list = []\n",
         "\n"
       ],
@@ -135,9 +175,7 @@
         "colab": {}
       },
       "source": [
-        "# Forward pass: compute predicted y\n",
-        "y_pred = x_numpy.dot(w)\n",
-        "print(y_pred)\n"
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -150,16 +188,22 @@
         "colab": {}
       },
       "source": [
-        "# Compute and print loss\n",
-        "loss = np.square(y_pred - y_numpy).sum()\n",
+        "for i in range(1000):\n",
+        "  # Forward pass: compute predicted y\n",
+        "  y_pred = x_numpy.dot(w)\n",
+        "  #print(y_pred)\n",
         "\n",
-        "# Backprop to compute gradients of w1 and w2 with respect to loss\n",
-        "grad_y_pred = 2.0 * (y_pred - y_numpy)\n",
-        "grad_w = x_numpy.T.dot(grad_y_pred)\n",
+        "  # Compute and print loss\n",
+        "  loss = np.square(y_pred - y_numpy).sum()\n",
+        "  loss_list.append(loss)\n",
         "\n",
-        "# Update weights\n",
-        "w = w - learning_rate * grad_w\n",
-        "print(w)"
+        "  # Backprop to compute gradients of w1 and w2 with respect to loss\n",
+        "  grad_y_pred = 2.0 * (y_pred - y_numpy)\n",
+        "  grad_w = x_numpy.T.dot(grad_y_pred)\n",
+        "\n",
+        "  # Update weights\n",
+        "  w = w - learning_rate * grad_w\n",
+        "  #print(w)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -182,15 +226,32 @@
       "metadata": {
         "id": "heXJqSquaVh4",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "89374348-a504-4ba3-9019-9d65da0a4b91",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 265
+        }
       },
       "source": [
         "plt.plot(loss_list, label = 'loss')\n",
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXAAAAD4CAYAAAD1jb0+AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4yLjAsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8GearUAAATqklEQVR4nO3dfZCdZXnH8e91XpJNSAhJ2C6RYAOK\nWoThZQLCqNFWBXTaKsXpmOmUQMH4h1qtjh0of4AzTLGmlepMq6YKohUKVawUHahNdQIzDGWDCQSQ\nJqLIxkA2AcJbAvty94/znLNnswnZ7J7N2fvs9zOzs+c859k815M788u91/MWKSUkSfkptbsASdLE\nGOCSlCkDXJIyZYBLUqYMcEnKVOVwbuzoo49Oy5YtO5yblKTsbdiwYWdKqXvf5Yc1wJctW0Zvb+/h\n3KQkZS8intjfclsokpQpA1ySMmWAS1KmDmsPXJIma2BggL6+Pvbu3dvuUlquq6uLpUuXUq1Wx7W+\nAS4pK319fcyfP59ly5YREe0up2VSSuzatYu+vj6OP/74cf2MLRRJWdm7dy+LFy/uqPAGiAgWL158\nSL9ZGOCSstNp4V13qPuVRYCve/Rp/vlnW9tdhiRNK1kE+M8e6+cbd/+q3WVIEgDz5s1rdwlAJgFe\nChj2wROSNEoWAR4RDA8b4JKml5QSn/vc5zj55JM55ZRTuOWWWwDYvn07K1as4LTTTuPkk0/m7rvv\nZmhoiIsvvrix7nXXXTfp7WdxGmEEGN+S9vX5/3yYR377fEv/zJNedyRX/dFbx7XubbfdxsaNG9m0\naRM7d+7kzDPPZMWKFdx0002cd955XHnllQwNDfHyyy+zceNGtm3bxubNmwF47rnnJl1rFjPwUgR2\nUCRNN/fccw8rV66kXC7T09PDu971Lu6//37OPPNMbrjhBq6++moeeugh5s+fzwknnMDjjz/OJz/5\nSe68806OPPLISW8/jxk49sAljTXemfLhtmLFCtavX8+PfvQjLr74Yj7zmc9w0UUXsWnTJu666y6+\n9rWvceutt3L99ddPajt5zMBLzsAlTT/vfOc7ueWWWxgaGqK/v5/169dz1lln8cQTT9DT08NHP/pR\nLrvsMh544AF27tzJ8PAwF154Iddccw0PPPDApLefxwzcs1AkTUMXXHAB9957L6eeeioRwRe/+EWO\nOeYYbrzxRtasWUO1WmXevHl8+9vfZtu2bVxyySUMDw8DcO211056+3kEOM7AJU0fL774IlA7Q27N\nmjWsWbNm1OerVq1i1apVY36uFbPuZnm0UAKS56FI0iiZBHjgaeCSNFoWAW4PXFKz1KF5cKj7lUmA\n2wOXVNPV1cWuXbs6LsTr9wPv6uoa989kcRCzVNxhMaXUsbeRlDQ+S5cupa+vj/7+/naX0nL1J/KM\nVxYBHtRCezhB2fyWZrRqtTruJ9Z0uixaKM0zcElSTR4BXhqZgUuSarII8DrPRJGkEVkEeMkDl5I0\nRhYBXs9vZ+CSNCKLAC81Ary9dUjSdJJJgNcS3LNQJGlEFgFe5wxckkYcNMAj4riI+GlEPBIRD0fE\np4rliyLiJxGxpfi+cMqKrDfBDXBJahjPDHwQ+GxK6STgbODjEXEScDmwLqV0IrCueD81RXoQU5LG\nOGiAp5S2p5QeKF6/ADwKHAt8ELixWO1G4ENTVWT9/icGuCSNOKQeeEQsA04H7gN6Ukrbi4+eAnoO\n8DOrI6I3InonevOZkh0USRpj3AEeEfOA7wOfTik93/xZqp0est98TSmtTSktTykt7+7unlCRzsAl\naaxxBXhEVKmF93dTSrcVi5+OiCXF50uAHVNT4siFPOa3JI0Yz1koAXwTeDSl9KWmj24H6k/tXAX8\nsPXl1YycBz5VW5Ck/IznfuBvB/4ceCgiNhbL/gb4AnBrRFwKPAH86dSU6FkokrQ/Bw3wlNI9wIHu\nJvWe1pazfyMPdDDAJakuiysx7YFL0lhZBLg9cEkaK4sA93aykjRWFgHemIG3uQ5Jmk6yCHBn4JI0\nViYB7v3AJWlfWQR4ybNQJGmMTAK8fh54mwuRpGkkiwCvX0VkD1ySRuQR4J4HLkljZBHg3gtFksbK\nIsCdgUvSWFkE+MgTeUxwSarLJMA9C0WS9pVFgGMPXJLGyCLAS16JKUljZBHg5SLAh4bbXIgkTSNZ\nBHipqHLIJrgkNWQR4JUiwe2BS9KILAK8XFQ56AxckhqyCPDGaYQGuCQ1ZBHg5VL9IKYBLkl1WQR4\nfQY+ZA9ckhqyCPD6DNwWiiSNyCrAnYFL0ogsArzRQnEGLkkNWQR4pd5CcQYuSQ1ZBHi9hTI4ZIBL\nUl0WAV5yBi5JY2QR4N7MSpLGyiLAGzezcgYuSQ1ZBHjZS+klaYw8AtxL6SVpjCwC3IOYkjTWQQM8\nIq6PiB0Rsblp2dURsS0iNhZfH5jKIivOwCVpjPHMwL8FnL+f5dellE4rvn7c2rJGq1+J6f3AJWnE\nQQM8pbQeeOYw1HJA3sxKksaaTA/8ExHxYNFiWXiglSJidUT0RkRvf3//hDZU9naykjTGRAP8q8Ab\ngNOA7cA/HGjFlNLalNLylNLy7u7uCW2s5AxcksaYUICnlJ5OKQ2llIaBfwHOam1ZY5VL4QxckppM\nKMAjYknT2wuAzQdat1XKEV5KL0lNKgdbISJuBt4NHB0RfcBVwLsj4jQgAb8GPjaFNQK1y+k9D1yS\nRhw0wFNKK/ez+JtTUMtrqpRKngcuSU2yuBIToBReyCNJzbIJ8HIpDHBJapJXgNsDl6SGbAK8FOF5\n4JLUJJsAt4UiSaNlE+ClsIUiSc2yCfByyRaKJDXLKsCHzG9JasgrwIe9ll6S6vIJ8PAgpiQ1yybA\nSyVvZiVJzbIJ8LI3s5KkUfIJcFsokjRKNgFeKoUzcElqkk2AOwOXpNGyCfCSl9JL0ijZBHjFAJek\nUbIJcG8nK0mjZRPg3k5WkkbLJsCdgUvSaNkEeCm8ElOSmmUT4OUStlAkqUk2AV4plRj0boSS1JBN\ngFfLwaAzcElqyCbAK+USA4POwCWpLpsAr5aDAWfgktSQTYBXSiUGPQ1FkhqyCfBqucSAD8WUpIaM\nAjwYcAYuSQ3ZBHjFs1AkaZRsArxaLjE0nLyYR5IKWQU4wIAX80gSkFGAV0oBwKAHMiUJyCnAixm4\nAS5JNQcN8Ii4PiJ2RMTmpmWLIuInEbGl+L5wasuEWeXaDPxVz0SRJGB8M/BvAefvs+xyYF1K6URg\nXfF+SjVm4PbAJQkYR4CnlNYDz+yz+IPAjcXrG4EPtbiuMeyBS9JoE+2B96SUthevnwJ6DrRiRKyO\niN6I6O3v75/g5mBWpTgLxRaKJAEtOIiZUkrAAafFKaW1KaXlKaXl3d3dE95OpVQPcGfgkgQTD/Cn\nI2IJQPF9R+tK2r9KcRDTGbgk1Uw0wG8HVhWvVwE/bE05B1YtAtzL6SWpZjynEd4M3Au8OSL6IuJS\n4AvA+yJiC/De4v2UalyJ6QxckgCoHGyFlNLKA3z0nhbX8ppGeuAGuCRBRldiNlooHsSUJCCrAPdC\nHklqlk2A189CeXXQGbgkQUYB7gxckkbLJsC9lF6SRssmwOszcO9GKEk12QW4M3BJqskmwCuNKzGd\ngUsSZBTgjRbKoAEuSZBRgM+u2AOXpGbZBPgsZ+CSNEo2AV4qBdVy8IoBLklARgEOMLtS5pUBA1yS\nILsAL/Hq0FC7y5CkaSGrAJ9VKTkDl6RCVgE+u1KyBy5JhcwCvOxZKJJUyCrAZ1VKvDJoD1ySILMA\nt4UiSSPyCvBqyRaKJBWyCvBZZWfgklSXVYDPrpTtgUtSIa8At4UiSQ1ZBbgtFEkakVWAz64a4JJU\nl1eAeyGPJDVkFeBeyCNJI7IK8NmVEgNDieFhH2wsSZkFeBnAPrgkkVmAd1Vr5e4dsI0iSVkF+NxZ\ntRn4ywa4JOUV4F3VWoDveXWwzZVIUvtlFeBzZ1UA2POqPXBJyizAixaKM3BJojKZH46IXwMvAEPA\nYEppeSuKOpA59sAlqWFSAV74/ZTSzhb8OQc1p9EDN8AlKdMWigEuSZMN8AT8V0RsiIjV+1shIlZH\nRG9E9Pb3909qY/UWyh5bKJI06QB/R0rpDOD9wMcjYsW+K6SU1qaUlqeUlnd3d09qYyNnoXgQU5Im\nFeAppW3F9x3AD4CzWlHUgdR74LZQJGkSAR4RR0TE/Ppr4Fxgc6sK259yKZhVKXkQU5KY3FkoPcAP\nIqL+59yUUrqzJVW9hrmzys7AJYlJBHhK6XHg1BbWMi5zq2UPYkoSmZ1GCDB3dsUrMSWJDAN83uwK\nL+w1wCUpuwCf31XheQNckvIL8CO7qrywd6DdZUhS22UX4PO7bKFIEmQb4M7AJSnDAK+yd2CYgSEf\n6iBpZsswwGunrttGkTTTZRjgVQDbKJJmvAwDvDYDf36PM3BJM1u2Ae4MXNJMl12AL5w7C4BnXzbA\nJc1s2QX44iNqAf7MS6+0uRJJaq/sAnxhEeC7Xnq1zZVIUntlF+DVcokFc6o8Y4BLmuGyC3CotVGc\ngUua6bIM8EVHzOKZFw1wSTNbvgHuDFzSDJdlgB89fzY7Xtjb7jIkqa2yDPBjj5rDsy8P+HR6STNa\nlgG+ZEEXANt372lzJZLUPpkG+BwAtu+2jSJp5soywI89qhbgv33OGbikmSvLAO9ZMJsI6HvWAJc0\nc2UZ4LMrZY5bOJdf9r/Y7lIkqW2yDHCAN/7OPLbuMMAlzVzZBvgbuo/g8Z0vMTSc2l2KJLVFtgH+\npp75vDo4zOO2USTNUNkG+OmvXwjAz3/zXJsrkaT2yDbATzj6CBbMqdL7xDPtLkWS2iLbAC+Vgrcd\nv4i7t+wkJfvgkmaebAMc4Ny3HsP23Xt5sG93u0uRpMMu6wB/3+/10FUtcdN9v2l3KZJ02GUd4Avm\nVrnwjKXc9vM+L+qRNONMKsAj4vyIeCwitkbE5a0q6lB8+r1vYk61zMe+s4GdL/qkekkzx4QDPCLK\nwD8B7wdOAlZGxEmtKmy8uufPZu1Fy3nymZc577r1fGXdFjY9+RwvvTLowU1JHS0mGnIRcQ5wdUrp\nvOL9FQAppWsP9DPLly9Pvb29E9rewfziqee55o5HuWfrzsayWeUSR86pMKtcIiIolaAcQSmCCIiI\nKalFh8ZR0Ezwt39yCmcuWzShn42IDSml5fsur0yinmOBJ5ve9wFv28+GVwOrAV7/+tdPYnOv7S3H\nHMm/XvY2tu/ew6Ynd/P4zhd5fs8gu/cMMDg0zHCC4ZSKLxj2EvxpIeE4aGaYUy23/M+cTICPS0pp\nLbAWajPwqd7ekgVzGg98kKRONpmDmNuA45reLy2WSZIOg8kE+P3AiRFxfETMAj4C3N6asiRJBzPh\nFkpKaTAiPgHcBZSB61NKD7esMknSa5pUDzyl9GPgxy2qRZJ0CLK+ElOSZjIDXJIyZYBLUqYMcEnK\n1IQvpZ/QxiL6gScm+ONHAzsPulZncZ9nBvd5ZpjMPv9uSql734WHNcAnIyJ693cvgE7mPs8M7vPM\nMBX7bAtFkjJlgEtSpnIK8LXtLqAN3OeZwX2eGVq+z9n0wCVJo+U0A5ckNTHAJSlTWQT4dHh4cqtF\nxHER8dOIeCQiHo6ITxXLF0XETyJiS/F9YbE8IuIrxd/BgxFxRnv3YOIiohwRP4+IO4r3x0fEfcW+\n3VLcnpiImF2831p8vqyddU9URBwVEd+LiF9ExKMRcU6nj3NE/FXx73pzRNwcEV2dNs4RcX1E7IiI\nzU3LDnlcI2JVsf6WiFh1KDVM+wCfLg9PngKDwGdTSicBZwMfL/brcmBdSulEYF3xHmr7f2LxtRr4\n6uEvuWU+BTza9P7vgOtSSm8EngUuLZZfCjxbLL+uWC9HXwbuTCm9BTiV2r537DhHxLHAXwLLU0on\nU7vd9EfovHH+FnD+PssOaVwjYhFwFbXHUZ4FXFUP/XFJKU3rL+Ac4K6m91cAV7S7rinYzx8C7wMe\nA5YUy5YAjxWvvw6sbFq/sV5OX9Se3LQO+APgDmrPNN4JVPYdb2r3mj+neF0p1ot278Mh7u8C4Ff7\n1t3J48zI83IXFeN2B3BeJ44zsAzYPNFxBVYCX29aPmq9g31N+xk4+3948rFtqmVKFL8yng7cB/Sk\nlLYXHz0F9BSvO+Xv4R+BvwaGi/eLgedSSoPF++b9auxz8fnuYv2cHA/0AzcUbaNvRMQRdPA4p5S2\nAX8P/AbYTm3cNtDZ41x3qOM6qfHOIcA7WkTMA74PfDql9HzzZ6n2X3LHnOcZEX8I7EgpbWh3LYdR\nBTgD+GpK6XTgJUZ+rQY6cpwXAh+k9p/X64AjGNtq6HiHY1xzCPCOfXhyRFSphfd3U0q3FYufjogl\nxedLgB3F8k74e3g78McR8Wvg36i1Ub4MHBUR9adDNe9XY5+LzxcAuw5nwS3QB/SllO4r3n+PWqB3\n8ji/F/hVSqk/pTQA3EZt7Dt5nOsOdVwnNd45BHhHPjw5IgL4JvBoSulLTR/dDtSPRK+i1huvL7+o\nOJp9NrC76Ve1LKSUrkgpLU0pLaM2jv+TUvoz4KfAh4vV9t3n+t/Fh4v1s5qpppSeAp6MiDcXi94D\nPEIHjzO11snZETG3+Hde3+eOHecmhzqudwHnRsTC4jeXc4tl49PugwDjPFDwAeD/gF8CV7a7nhbt\n0zuo/Xr1ILCx+PoAtd7fOmAL8N/AomL9oHY2zi+Bh6gd4W/7fkxi/98N3FG8PgH4X2Ar8O/A7GJ5\nV/F+a/H5Ce2ue4L7ehrQW4z1fwALO32cgc8DvwA2A98BZnfaOAM3U+vxD1D7TevSiYwr8BfFvm8F\nLjmUGryUXpIylUMLRZK0Hwa4JGXKAJekTBngkpQpA1ySMmWAS1KmDHBJytT/A8YnNXBhpPNbAAAA\nAElFTkSuQmCC\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "code",
